log/build_2022-08-09_14-07-05/robot_control/stderr.log
  File "/home/louis/dev_robot/install/robot_control/lib/python3.8/site-packages/robot_control/path_control.py", line 58
    else
       ^
SyntaxError: invalid syntax

